sorting and autocomplete changes

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
    </button>
    <mat-menu #menu="matMenu" class="user-menu">
     <button mat-menu-item class="user-name">
-      {{ userManagementServ.getUserName() }}
+      {{ userManagementServ.getRoleName() }} 
     </button>
     <button mat-menu-item>
       My Profile
