--- a/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.html
+++ b/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.html
@@ -37,7 +37,7 @@
                 <!-- Number Column-->
                 <ng-container matColumnDef="Number">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Number"> Number </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.contactnumber}} </td>
+                    <td mat-cell *matCellDef="let element" nowrap> {{element?.contactnumber}} </td>
                 </ng-container>
 
                 <!-- Technology Column-->
