--- a/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
+++ b/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
@@ -49,27 +49,27 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by ValidFrom">
                         Valid From </th>
                     <td mat-cell *matCellDef="let element">
-                        {{element?.h1validfrom}}</td>
+                        {{element?.h1validfrom | date:'MM-dd-yyyy'}}</td>
                 </ng-container>
 
                 <!-- ValidTill Column-->
                 <ng-container matColumnDef="ValidTill">
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by ValidTill"> Valid Till </th>
-                    <td mat-cell *matCellDef="let element">{{element?.h1validto}} </td>
+                    <td mat-cell *matCellDef="let element">{{element?.h1validto | date:'MM-dd-yyyy'}} </td>
                 </ng-container>
 
                 <!-- E-Verify Column-->
                 <ng-container matColumnDef="E-Verify">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by E-Verify">
                         E-Verify </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.everifydate}}
+                    <td mat-cell *matCellDef="let element"> {{element?.everifydate | date:'MM-dd-yyyy'}}
                     </td>
                 </ng-container>
 
                 <!-- LastI9 Column-->
                 <ng-container matColumnDef="LastI9">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by LastI9"> Last I9 </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.lasti9date}}
+                    <td mat-cell *matCellDef="let element"> {{element?.lasti9date | date:'MM-dd-yyyy'}}
                     </td>
                 </ng-container>
 
