--- a/src/app/usit/components/recruitment/requirement-list/add-requirement/add-requirement.component.html
+++ b/src/app/usit/components/recruitment/requirement-list/add-requirement/add-requirement.component.html
@@ -29,14 +29,14 @@
         </mat-form-field>
 
         <!-- Select Vendor/Impl -->
-        <div class="fg-div">
+        <!-- <div class="fg-div">
           <mat-form-field appearance="fill">
           <mat-label>Select Vendor/Impl</mat-label>
-          <!-- <input matInput formControlName="vendorimpl"  maxlength="50"> -->
-          <!-- [matAutocomplete]="vendorAutoCmp" -->
-          <!-- <mat-autocomplete #vendorAutoCmp="matAutocomplete">
+          <input matInput formControlName="vendorimpl"  maxlength="50">
+          [matAutocomplete]="vendorAutoCmp"
+          <mat-autocomplete #vendorAutoCmp="matAutocomplete">
             <mat-option *ngFor="let option of vendorCompanyArr" [value]="option.company" (onSelectionChange)="recruiterList(option.id)">{{ option.company.trim() }}</mat-option>
-          </mat-autocomplete> -->
+          </mat-autocomplete>
           <mat-select formControlName="vendorimpl" (selectionChange)="recruiterList($event)">
             <mat-option *ngFor="let option of  vendorCompanyArr" [value]="option.id">{{ option.company.trim() }}</mat-option>
           </mat-select>
@@ -45,7 +45,25 @@
           <mat-error *ngIf="requirementForm.get('vendorimpl')!.hasError('required')"> Vendor Company is required</mat-error>
 
         </mat-form-field>
-        </div>
+        </div> -->
+
+        <div class="fg-div">
+          <mat-form-field appearance="fill">
+              <mat-label>Select Vendor/Impl</mat-label>
+              <input matInput formControlName="vendorimpl" [matAutocomplete]="companyAutoCmp">
+              <mat-autocomplete #companyAutoCmp="matAutocomplete">
+                  <mat-option *ngFor="let option of (searchCompanyOptions$ | async)" [value]="option.company"
+                  (click)="recruiterList(option)">
+                      {{option.company}}
+                  </mat-option>
+              </mat-autocomplete>
+              <button type="button" matSuffix mat-icon-button (click)="addVendor()"><mat-icon>add</mat-icon></button>
+              <mat-hint *ngIf="isCompanyDataAvailable" style="color: red;">Please Select Available Company</mat-hint>
+              <mat-error *ngIf="requirementForm.get('vendorimpl')!.hasError('required')">Vendor Company
+                  is Required
+              </mat-error>
+          </mat-form-field>
+      </div>
 
         <!-- Client -->
         <mat-form-field appearance="fill">
@@ -57,11 +75,11 @@
         <mat-form-field appearance="fill">
           <mat-label>Job Title</mat-label>
           <input matInput formControlName="jobtitle"  maxlength="120">
-          <mat-error *ngIf="requirementForm.get('jobtitle')!.hasError('required')"> Job Title is required</mat-error>
+          <mat-error *ngIf="requirementForm.get('jobtitle')!.hasError('required')"> Job Title is Required</mat-error>
         </mat-form-field>
 
         <!-- Select Technology -->
-        <div class="fg-div">
+        <!-- <div class="fg-div">
           <mat-form-field appearance="fill" class="form-technology">
             <mat-label>Select Technology</mat-label>
             <mat-select formControlName="technology" (selectionChange)="techSkills($event)">
@@ -69,6 +87,20 @@
               
             </mat-select>
             <button type="button" matSuffix mat-icon-button (click)="goToTechnologyList()"><mat-icon>add</mat-icon></button>
+          </mat-form-field>
+        </div> -->
+
+        <div class="fg-div">
+          <mat-form-field appearance="fill" class="form-technology">
+            <mat-label>Select Technology</mat-label>
+            <input matInput formControlName="technology" [matAutocomplete]="techAutoCmp" >
+            <mat-autocomplete #techAutoCmp="matAutocomplete">
+              <mat-option *ngFor="let option of (searchTechOptions$ | async)" (click)="techSkills(option)" [value]="option.technologyarea">
+                {{ option.technologyarea }}
+              </mat-option>
+            </mat-autocomplete>
+            <button matSuffix mat-icon-button (click)="addTechnology();$event.preventDefault();$event.stopImmediatePropagation()"><mat-icon>add</mat-icon></button>
+            <mat-error *ngIf="requirementForm.get('technology')!.hasError('required')">Technology is Required</mat-error>
           </mat-form-field>
         </div>
 
@@ -82,14 +114,14 @@
         <mat-form-field class="description-field">
           <mat-label>Job Description</mat-label>
           <textarea formControlName="jobdescription" matInput rows="4" maxlength="10000"></textarea>
-            <mat-error *ngIf="requirementForm.get('jobdescription')!.hasError('required')"> Job Description is required</mat-error>
+            <mat-error *ngIf="requirementForm.get('jobdescription')!.hasError('required')"> Job Description is Required</mat-error>
         </mat-form-field>
 
           <!-- Location -->
           <mat-form-field appearance="fill">
             <mat-label>Location</mat-label>
             <input matInput formControlName="location" ngx-gp-autocomplete [options]='options' (onAddressChange)="handleAddressChange($event)" maxlength="140">
-            <mat-error *ngIf="requirementForm.get('location')!.hasError('required')"> Location is required</mat-error>
+            <mat-error *ngIf="requirementForm.get('location')!.hasError('required')"> Location is Required</mat-error>
           </mat-form-field>
       </div>
 
@@ -109,7 +141,7 @@
             <mat-radio-button value="W2">W2</mat-radio-button>
             <mat-radio-button value="Full Time">Full Time</mat-radio-button>
             <mat-radio-button value="C2H">C2H</mat-radio-button>
-            <mat-error *ngIf="requirementForm.get('employmenttype')!.hasError('required')  && isRadSelected">Employment Type is required</mat-error>
+            <mat-error *ngIf="requirementForm.get('employmenttype')!.hasError('required')  && isRadSelected">Employment Type is Required</mat-error>
           </mat-radio-group>
         </div>
         
@@ -152,8 +184,8 @@
             <mat-select formControlName="recruiter" (selectionChange)="recruiterContact($event)">
               <mat-option *ngFor="let obj of recruiterArr" [value]="obj.id">{{obj.recruiter}}</mat-option>
             </mat-select>
-            <button type="button" matSuffix mat-icon-button (click)="goToRecruiterList()"><mat-icon>add</mat-icon></button>
-            <mat-error *ngIf="requirementForm.get('recruiter')!.hasError('required')">Contact Person Name is required</mat-error>
+            <button type="button" matSuffix mat-icon-button (click)="addRecruiter()"><mat-icon>add</mat-icon></button>
+            <mat-error *ngIf="requirementForm.get('recruiter')!.hasError('required')">Contact Person Name is Required</mat-error>
           </mat-form-field>
          </div>
 
@@ -185,7 +217,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Project Duration</mat-label>
           <input matInput formControlName="duration" maxlength="30">
-          <mat-error *ngIf="requirementForm.get('duration')!.hasError('required')"> Project duration is required</mat-error>
+          <mat-error *ngIf="requirementForm.get('duration')!.hasError('required')"> Project duration is Required</mat-error>
         </mat-form-field>
 
 
@@ -198,7 +230,7 @@
               {{ option }}
             </mat-option>
             </mat-select>
-            <mat-error *ngIf="requirementForm.get('status')!.hasError('required')"> Status is required</mat-error>
+            <mat-error *ngIf="requirementForm.get('status')!.hasError('required')"> Status is Required</mat-error>
         </mat-form-field>
       </div>
     </div>
