--- a/src/app/usit/components/sales/h1transfer/h1transfer.component.scss
+++ b/src/app/usit/components/sales/h1transfer/h1transfer.component.scss
@@ -195,3 +195,9 @@
     color: black;
     pointer-events: none;
   }
+
+  @media screen and (min-width: 1920px) {
+    .hot-list-container {
+      height: 90vh;
+    }
+  }
