--- a/src/app/usit/components/sales/interview-list/interview-list.component.html
+++ b/src/app/usit/components/sales/interview-list/interview-list.component.html
@@ -34,13 +34,13 @@
                 </ng-container>
                 <!-- Date-->
                 <ng-container matColumnDef="InterviewId">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by InterviewId"> Interview ID
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by InterviewId" mat-sort-header> Interview ID
                     </th>
                     <td mat-cell *matCellDef="let element"> {{element?.interviewno}} </td>
                 </ng-container>
                 <!-- ID-->
                 <ng-container matColumnDef="ConsultantName">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ConsultantName"> Consultant Name </th>
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ConsultantName" mat-sort-header> Consultant Name </th>
                     <td mat-cell *matCellDef="let element">
                         <span class="consultant-id"
                         (click)="goToConsultantInfo(element, flag)">{{element?.name}}
@@ -50,19 +50,19 @@
                 </ng-container>
                 <!-- Name-->
                 <ng-container matColumnDef="DateAndToI">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by DateAndToI">
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by DateAndToI" mat-sort-header>
                         Date & Time of Interview </th>
-                    <td mat-cell *matCellDef="let element">
-                        {{element?.interview_date}} {{element?.time_zone}}</td>
+                    <td mat-cell *matCellDef="let element" nowrap>
+                        {{element?.interview_date | date:'MM-dd-yyyy HH:mm'}} {{element?.time_zone}}</td>
                 </ng-container>
                 <!-- Track(S/I)-->
                 <ng-container matColumnDef="Round">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Round"> Round </th>
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Round" mat-sort-header> Round </th>
                     <td mat-cell *matCellDef="let element">{{element?.round}} </td>
                 </ng-container>
                 <!-- Requirement-->
                 <ng-container matColumnDef="Mode">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Mode">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Mode" mat-sort-header>
                         Mode </th>
                     <td mat-cell *matCellDef="let element"> {{element?.mode}}
                     </td>
@@ -70,34 +70,34 @@
                 <!-- Vendor-->
                 <ng-container matColumnDef="Vendor">
                     <th mat-header-cell *matHeaderCellDef 
-                        sortActionDescription="Sort by Vendor">
+                        sortActionDescription="Sort by Vendor" mat-sort-header>
                         Vendor </th>
                     <td mat-cell *matCellDef="let element"> {{element?.vendor}}
                     </td>
                 </ng-container>
                 <!-- Implementation Partner-->
                 <ng-container matColumnDef="ImplementationPartner">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ImplementationPartner"> Implementation Partner </th>
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ImplementationPartner" mat-sort-header> Implementation Partner </th>
                     <td mat-cell *matCellDef="let element"> {{element?.implpartner}}
                     </td>
                 </ng-container>
                 <!-- Client Location -->
                 <ng-container matColumnDef="Client">
                     <th mat-header-cell *matHeaderCellDef 
-                        sortActionDescription="Sort by Client"> Client </th>
+                        sortActionDescription="Sort by Client" mat-sort-header> Client </th>
                     <td mat-cell *matCellDef="let element"> {{element?.endclient}}
                     </td>
                 </ng-container>
                 <!-- Sub Rate Column -->
                 <ng-container matColumnDef="DateOfSubmission">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by DateOfSubmission">
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by DateOfSubmission" mat-sort-header>
                         Date of Submission</th>
-                    <td mat-cell *matCellDef="let element"> {{element.createddate}}
+                    <td mat-cell *matCellDef="let element"> {{element.createddate | date:'MM-dd-yyyy'}}
                     </td>
                 </ng-container>
                 <!-- Project Location Column -->
                 <ng-container matColumnDef="EmployeerName">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by EmployeerName">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by EmployeerName" mat-sort-header>
                         Employeer Name</th>
                     <td mat-cell *matCellDef="let element">
                         <ng-container *ngIf="this.flag == 'Recruiting'; then recInterview else salesInterview"></ng-container>
@@ -111,7 +111,7 @@
 
                 <!-- Interview Status Column -->
                 <ng-container matColumnDef="InterviewStatus">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by InterviewStatus">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by InterviewStatus" mat-sort-header>
                         Interview Status
                     </th>
                     <td mat-cell *matCellDef="let element"> {{element.interview_status}} </td>
