--- a/src/app/usit/components/sales/submission-list/add-submission/add-submission.component.html
+++ b/src/app/usit/components/sales/submission-list/add-submission/add-submission.component.html
@@ -47,59 +47,60 @@
                     </mat-form-field>
                 </div> -->
 
-                <div class="fg-div">
+                <!-- <div class="fg-div">
                     <mat-form-field appearance="fill">
                         <mat-label>Select Consultant</mat-label>
                         <mat-select formControlName="consultant">
-                            <mat-option *ngFor="let obj of consultantdata" [value]="obj[0]">
-                                {{obj[1]}} ({{obj[2]}} with {{obj[3]}})
+                            <mat-option *ngFor="let obj of consultantdata" [value]="obj.consultantid">
+                                {{obj.consultantname}} ({{obj.technologyarea}} with {{obj.experience}})
                             </mat-option>
                         </mat-select>
                         <mat-error *ngIf="submissionForm.get('consultant')!.hasError('required')">Consultant
                             is Required
                         </mat-error>
                     </mat-form-field>
-                </div>
+                </div> -->
 
-                <!-- <div class="fg-div">
+                <div class="fg-div" >
                     <mat-form-field appearance="fill">
                         <mat-label>Select Consultant</mat-label>
-                        <input matInput formControlName="consultant" [matAutocomplete]="consultantAutoCmp" maxlength="75">
+                        <input matInput formControlName="consultant" [matAutocomplete]="consultantAutoCmp" >
                         <mat-autocomplete #consultantAutoCmp="matAutocomplete">
                             <mat-option *ngFor="let option of (searchConsultantOptions$ | async)"
-                                [value]="option[0]">
-                                {{option[1]}} ({{option[2]}} with {{option[3]}})
+                                [value]="option.consultantname">
+                                {{option.consultantname}}
                             </mat-option>
                         </mat-autocomplete>
+                        <mat-hint *ngIf="isConsultantDataAvailable" style="color: red;">Please Select Available Consultant</mat-hint>
                         <mat-error *ngIf="submissionForm.get('consultant')!.hasError('required')">Consultant is Required
                         </mat-error>
                     </mat-form-field>
-                </div>      -->
+                </div>     
 
                 <mat-form-field appearance="fill">
                     <mat-label>Position Title</mat-label>
                     <input matInput formControlName="position" maxlength="150" (input)="camelCase($event)">
-                    <mat-error *ngIf="submissionForm.get('position')!.hasError('required')"> Position Title is required</mat-error>
+                    <mat-error *ngIf="submissionForm.get('position')!.hasError('required')"> Position Title is Required</mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="fill">
                     <mat-label>Project Location</mat-label>
                     <input matInput formControlName="projectlocation" ngx-gp-autocomplete [options]='options' (onAddressChange)="handleAddressChange($event)">
-                    <mat-error *ngIf="submissionForm.get('projectlocation')!.hasError('required')"> Location is required</mat-error>
+                    <mat-error *ngIf="submissionForm.get('projectlocation')!.hasError('required')"> Location is Required</mat-error>
                 </mat-form-field>
 
                 <div style="width: 80%;">
                     <mat-label>Rate Type</mat-label><br>
                     <mat-radio-group formControlName="ratetype" aria-label="Select an option">
                       <mat-radio-button *ngFor="let opt of selectOptionObj.radioOptions.rate"  [value]="opt.value" (change)="onRadioChange($event)">{{opt.value}}</mat-radio-button>
-                      <mat-error *ngIf="submissionForm.get('ratetype')!.hasError('required') && isRadSelected"> Rate Type is required</mat-error>
+                      <mat-error *ngIf="submissionForm.get('ratetype')!.hasError('required') && isRadSelected"> Rate Type is Required</mat-error>
                     </mat-radio-group>
                 </div>
 
                 <mat-form-field appearance="fill">
                     <mat-label>Submission Rate</mat-label>
                     <input matInput  formControlName="submissionrate" maxlength="5">
-                    <mat-error *ngIf="submissionForm.get('submissionrate')!.hasError('required')">Submission Rate is required</mat-error>
+                    <mat-error *ngIf="submissionForm.get('submissionrate')!.hasError('required')">Submission Rate is Required</mat-error>
                 </mat-form-field>
             </div>
 
@@ -114,7 +115,7 @@
                     <input matInput formControlName="implpartner" maxlength="120" (input)="camelCase($event)">
                 </mat-form-field>
 
-                <div class="fg-div">
+                <!-- <div class="fg-div">
                     <mat-form-field appearance="fill">
                         <mat-label>Select Company</mat-label>
                         <mat-select formControlName="vendor" (selectionChange)="recruiterList($event)">
@@ -124,6 +125,24 @@
                             </mat-option>
                         </mat-select>
                         <button type="button" matSuffix mat-icon-button (click)="goToVendorList()"><mat-icon>add</mat-icon></button>
+                        <mat-error *ngIf="submissionForm.get('vendor')!.hasError('required')">Vendor Company
+                            is Required
+                        </mat-error>
+                    </mat-form-field>
+                </div> -->
+
+                <div class="fg-div">
+                    <mat-form-field appearance="fill">
+                        <mat-label>Select Company</mat-label>
+                        <input matInput formControlName="vendor" [matAutocomplete]="companyAutoCmp">
+                        <mat-autocomplete #companyAutoCmp="matAutocomplete">
+                            <mat-option *ngFor="let option of (searchCompanyOptions$ | async)" [value]="option.company"
+                            (click)="recruiterList(option)">
+                                {{option.company}}
+                            </mat-option>
+                        </mat-autocomplete>
+                        <button type="button" matSuffix mat-icon-button (click)="addVendor()"><mat-icon>add</mat-icon></button>
+                        <mat-hint *ngIf="isCompanyDataAvailable" style="color: red;">Please Select Available Company</mat-hint>
                         <mat-error *ngIf="submissionForm.get('vendor')!.hasError('required')">Vendor Company
                             is Required
                         </mat-error>
@@ -139,7 +158,7 @@
                                       {{obj.recruiter}}
                             </mat-option>
                         </mat-select>
-                        <button type="button" matSuffix mat-icon-button (click)="goToVendorList()"><mat-icon>add</mat-icon></button>
+                        <button type="button" matSuffix mat-icon-button (click)="addRecruiter()"><mat-icon>add</mat-icon></button>
                         <mat-error *ngIf="submissionForm.get('recruiter')!.hasError('required')">Contact Person Name
                             is Required
                         </mat-error>
@@ -154,7 +173,7 @@
                 <mat-form-field appearance="fill">
                     <mat-label>Email</mat-label>
                     <input matInput formControlName="empmail" maxlength="50" readonly/>
-                    <mat-error *ngIf="submissionForm.get('empmail')!.hasError('required')">Email is required</mat-error>
+                    <mat-error *ngIf="submissionForm.get('empmail')!.hasError('required')">Email is Required</mat-error>
                     <mat-error *ngIf="submissionForm.get('empmail')!.hasError('pattern')">Invalid Email Address</mat-error>
                 </mat-form-field>
 
