--- a/src/app/usit/components/tech-support-list/add-tech-support/add-tech-support.component.html
+++ b/src/app/usit/components/tech-support-list/add-tech-support/add-tech-support.component.html
@@ -15,8 +15,8 @@
           <div class="form-column-left" *ngIf="registerForm.controls">
             <mat-form-field appearance="fill">
               <mat-label>Full Name</mat-label>
-              <input matInput formControlName="name" maxlength="50" />
-              <mat-error *ngIf="registerForm.get('name').hasError('required')">Full Name is required</mat-error>
+              <input matInput formControlName="name" maxlength="50"  (input)="camelCase($event)"/>
+              <mat-error *ngIf="registerForm.get('name').hasError('required')">Full Name is Required</mat-error>
               <mat-error *ngIf="registerForm.get('name').hasError('minlength')">Full Name must be at least 6
                 characters</mat-error>
               <mat-error *ngIf="registerForm.get('name').hasError('maxlength')">Full Name must not exceed 100
@@ -25,14 +25,14 @@
             <!-- Psuedo Name -->
             <mat-form-field appearance="fill">
               <mat-label>Psuedo Name</mat-label>
-              <input matInput formControlName="pseudoname" maxlength="15" />
-              <mat-error *ngIf="registerForm.get('pseudoname').hasError('required')">Psuedo Name is required</mat-error>
+              <input matInput formControlName="pseudoname" maxlength="15"  (input)="camelCase($event)"/>
+              <mat-error *ngIf="registerForm.get('pseudoname').hasError('required')">Psuedo Name is Required</mat-error>
             </mat-form-field>
   
             <mat-form-field appearance="fill">
               <mat-label> Email</mat-label>
-              <input matInput formControlName="email" maxlength="25" />
-              <mat-error *ngIf="registerForm.get('email')!.hasError('required')">Email is required</mat-error>
+              <input matInput formControlName="email" maxlength="40" (input)="convertToLowerCase($event)" />
+              <mat-error *ngIf="registerForm.get('email')!.hasError('required')">Email is Required</mat-error>
               <mat-error *ngIf="registerForm.get('email')!.hasError('email')">Invalid email address</mat-error>
             </mat-form-field>
             <mat-form-field appearance="fill">
@@ -50,7 +50,7 @@
             <mat-form-field appearance="fill">
               <mat-label>Experience</mat-label>
               <input matInput formControlName="experience" maxlength="25" />
-              <mat-error *ngIf="registerForm.get('experience')!.hasError('required')">Experience is required</mat-error>
+              <mat-error *ngIf="registerForm.get('experience')!.hasError('required')">Experience is Required</mat-error>
               <mat-error *ngIf="registerForm.get('experience')!.hasError('mobile')">Invalid Experience </mat-error>
             </mat-form-field>
           </div>
@@ -59,7 +59,7 @@
             <mat-form-field appearance="fill">
               <mat-label>Location</mat-label>
               <input matInput formControlName="location" ngx-gp-autocomplete [options]='options' (onAddressChange)="handleAddressChange($event)" maxlength="140">
-              <mat-error *ngIf="registerForm.get('location')!.hasError('required')"> Location is required</mat-error>
+              <mat-error *ngIf="registerForm.get('location')!.hasError('required')"> Location is Required</mat-error>
             </mat-form-field>
   
             <mat-form-field appearance="fill">
@@ -71,7 +71,7 @@
               </mat-select>
               <button matSuffix mat-icon-button (click)="onAddTechnology();$event.preventDefault();$event.stopImmediatePropagation()"><mat-icon>add</mat-icon></button>
        
-              <mat-error *ngIf="registerForm.get('technology').hasError('required')">Technology is required</mat-error>
+              <mat-error *ngIf="registerForm.get('technology').hasError('required')">Technology is Required</mat-error>
             </mat-form-field>
   
            <!-- Skills -->
