--- a/src/app/usit/components/technology-tag-list/technology-tag-list.component.html
+++ b/src/app/usit/components/technology-tag-list/technology-tag-list.component.html
@@ -1,79 +1,86 @@
-<div class="container">
+<div class="hot-list-container">
   <ul class="breadcrumb">
     <li><a (click)="navigateToDashboard()">Home</a></li>
     <li class="last">Technology</li>
   </ul>
-  <div class="technology-header-container mat-elevation-z1">
+  <div class="header-container mat-elevation-z1">
     <span class="header-text">
       Technology Tag
     </span>
-    <div class="technology-actions">
+    <div class="hot-list-actions">
       <button [disabled]="!privilegeServ.hasPrivilege('ADD_TECHNOLOGY_TAG')" mat-icon-button class="add-user"
         (click)="addTechnology()" matTooltip="Add Technology" matTooltipPosition="left">
         <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_TECHNOLOGY_TAG')}">add_circle</mat-icon>
       </button>
 
-      <div class="search-technology">
-        <input matInput type="search" class="search" placeholder="search technology" (keyup)="onFilter($event)">
+
+      <div class="search-hot-list">
+        <input matInput type="text" class="search" placeholder="search " (keyup)="applyFilter($event)">
       </div>
     </div>
   </div>
-  <div class="table-wrapper">
-    <section class="technology-table-style mat-elevation-z8">
 
-      <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)">
+  <div id="table-container" class="table-wrapper">
+    <section class="mat-elevation-z8 hot-list-table-style">
+      <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false">
 
         <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-        <!-- Serial Number Column -->
+              The actual rendered columns are set as a property on the row definition" -->
+
+        <!-- SNo Column -->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum"> # </th>
-          <td mat-cell *matCellDef="let element"> {{ element.serialNum }} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number" style="width: 2%">
+            S.No </th>
+          <td mat-cell *matCellDef="let element" style="width: 2%"> {{element?.serialNum}} </td>
         </ng-container>
 
-        <!-- Technology Column -->
+        <!-- Name Column-->
         <ng-container matColumnDef="Technology">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology"> Technology
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology" style="width: 20%"> Technology
           </th>
-          <td mat-cell *matCellDef="let element"> {{ element.technologyarea }} </td>
+          <td mat-cell *matCellDef="let element" style="width: 20%"> {{ element.technologyarea }} </td>
         </ng-container>
-
-        <!-- Skills Column -->
+        <!-- Technology Column-->
         <ng-container matColumnDef="Skills">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company"> Skills </th>
-          <td mat-cell *matCellDef="let element"> {{ element.listofkeyword }} </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company" style="width: 73%"> Skills </th>
+          <td mat-cell *matCellDef="let element" style="width: 73%"> {{ element.listofkeyword }} </td>
         </ng-container>
+        <!-- Priority Column-->
+          <!-- actions -->
+          <ng-container matColumnDef="Actions">
+            <th mat-header-cell *matHeaderCellDef> Action </th>
+            <td mat-cell *matCellDef="let technology" nowrap>
+              <span class="action-buttons">
+              <button [disabled]="!privilegeServ.hasPrivilege('EDIT_TECHNOLOGY_TAG')" mat-icon-button
+                (click)="editTechnology(technology)" class="action-button-ed">
+                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_TECHNOLOGY_TAG')}">edit</mat-icon>
+              </button>
+  
+              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_TECHNOLOGY_TAG')" mat-icon-button
+                (click)="deleteTechnology(technology)" class="action-button-ed">
+                <mat-icon
+                  [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_TECHNOLOGY_TAG')}">delete</mat-icon>
+              </button>
+            </span>
+            </td>
+          </ng-container>
 
-        <!-- actions -->
-        <ng-container matColumnDef="Actions">
-          <th mat-header-cell *matHeaderCellDef> Action </th>
-          <td mat-cell *matCellDef="let technology" class="action-buttons">
-            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_TECHNOLOGY_TAG')" mat-icon-button
-              (click)="editTechnology(technology)" class="action-button-ed">
-              <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_TECHNOLOGY_TAG')}">edit</mat-icon>
-            </button>
-
-            <button [disabled]="!privilegeServ.hasPrivilege('DELETE_TECHNOLOGY_TAG')" mat-icon-button
-              (click)="deleteTechnology(technology)" class="action-button-ed">
-              <mat-icon
-                [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_TECHNOLOGY_TAG')}">delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="getRowClass(row)"></tr>
+        <!-- table ROW -->
+        <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
       </table>
-      <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
+      <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
     </section>
+    <hr>
   </div>
-  <div>
 
+
+  <div class="paginator">
     <!-- paginator -->
-    <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
-      [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
-      [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
-      [pageIndex]="pageIndex" aria-label="Select page">
+    <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+      [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+      [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
     </mat-paginator>
-
   </div>
+
 </div>
