--- a/src/app/usit/components/technology-tag-list/technology-tag-list.component.scss
+++ b/src/app/usit/components/technology-tag-list/technology-tag-list.component.scss
@@ -1,128 +1,14 @@
-.container {
-  // display: flex;
-  // flex-direction: column;
+.hot-list-container {
+  display: flex;
+  flex-direction: column;
   height: 86vh;
-}
-
-.table-wrapper {
-  flex: 1;
-  overflow: auto;
-  padding: 0 4px 4px 4px;
-}
-
-table {
-  width: 100%;
-}
-
-.mat-mdc-header-row {
-  background-color: rgb(213, 231, 231);
-  position: sticky;
-  top: 0;
-}
-
-thead {
-  position: sticky;
-  top: 0;
-}
-
-.mat-sort-header-arrow {
-  color: #1a1717;
-}
-
-.mat-mdc-column {
-  border-right: 1px solid currentColor;
-}
-
-.mat-column-SerialNum,
-.mat-column-Technology,
-.mat-column-Skills {
-  border-right: 1px solid lightgray;
-  padding-right: 24px;
-}
-
-.mat-column-Actions {
-  width: fit-content;
-}
-
-.technology-header-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  height: 48px;
-  background-color: white;
-  z-index: 99999;
-  top: 0;
-  overflow: hidden;
-  margin: 4px;
-}
-
-.header-text {
-  padding-left: 8px;
-  font-weight: 600;
-}
-
-.add-user {
-  cursor: pointer;
-}
-
-.technology-actions {
-  display: flex;
-  align-items: center;
-
-  .search {
-    height: 32px;
-    padding: 0px 8px;
-  }
-}
-
-.no-data-found {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1rem;
-  margin-top: 64px;
-}
-
-.action-buttons {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.action-buttons button {
-  margin: 0;
-  padding: 0;
-  width: 30px;
-  height: 30px;
-}
-
-::ng-deep .action-button-ed .mat-mdc-button-touch-target {
-  width: 30px !important;
-  height: 30px !important;
-}
-
-::ng-deep .action-button-ed .mat-mdc-focus-indicator {
-  width: 30px !important;
-  height: 30px !important;
-  top: 10px;
-}
-
-.mat-mdc-header-row {
-  height: 30px !important;
-  z-index: 999;
-}
-
-.mat-mdc-row {
-  height: 30px !important;
 }
 
 ul {
   padding-inline-start: 10px;
   background-color: rgb(228, 231, 234);
   height: 2rem;
-  padding-top: 8px;
+  padding-top: 8PX;
   top: 0;
 }
 
@@ -134,7 +20,7 @@ ul.breadcrumb li {
   display: inline;
 }
 
-ul.breadcrumb li + li:before {
+ul.breadcrumb li+li:before {
   color: black;
   content: "/\00a0";
 }
@@ -150,29 +36,159 @@ ul.breadcrumb li a:hover {
   text-decoration: underline;
 }
 
-.even-row {
-  background-color: white;
+.table-wrapper {
+  flex: 1;
+  overflow: auto;
 }
 
-.odd-row {
+table {
+  width: 100%;
+}
+
+.mat-mdc-header-row {
   background-color: rgb(213, 231, 231);
+
+  top: 0;
 }
 
-.technology-table-style {
+
+tbody {
+  text-align: left;
+}
+
+.mat-sort-header-arrow {
+  color: #1a1717;
+}
+
+.mat-mdc-column {
+  border-right: 1px solid currentColor;
+}
+
+.mat-column-Designation {
+  width: 32px;
+  border-right: 1px solid lightgray;
+  padding-right: 24px;
+}
+
+.mat-column-Name {
+  border-right: 1px solid lightgray;
+}
+
+.mat-column-SerialNum,
+.mat-column-Technology,
+.mat-column-Skills
+{
+  border-right: 1px solid lightgray;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 48px;
+  background-color: white;
+  top: 0;
+  overflow: hidden;
+  margin: 4px;
+  background-color: rgb(228, 231, 234);
+}
+
+.header-text {
+  padding-left: 8px;
+  font-weight: 600;
+}
+
+.add-hot-list {
+  cursor: pointer;
+}
+
+.hot-list-actions {
+  display: flex;
+  align-items: center;
+
+  .search {
+    height: 32px;
+    padding: 0px 8px;
+  }
+}
+
+.hot-list-table-style {
   padding: 0 2px;
   width: 100%;
-  // max-height: calc(100% - 2px);
-  height: 61vh;
+  max-height: calc(100% - 3px);
   overflow: auto;
   display: block;
 }
-.edit-icon,
-.delete-icon {
-  color: rgb(99, 98, 98);
+
+.mdc-data-table__cell,
+.mdc-data-table__header-cell {
+  padding: 0 4px 0 4px;
 }
 
-@media screen and (min-width: 1920px) {
-  .container {
-    height: 90vh;
+.mat-mdc-header-row {
+  z-index: 1000;
+}
+
+.no-data-found {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  margin-top: 64px;
+}
+
+
+.responsive-table {
+  width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .responsive-table {
+    table-layout: auto;
   }
+
+  .mdc-data-table__cell,
+  .mdc-data-table__header-cell {
+    padding: 0px 2px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+  .mdc-data-table__cell,
+  .mdc-data-table__header-cell {
+    padding: 0px 2px;
+  }
+}
+
+@media screen and (min-width: 1850px) {
+  .hot-list-table-style {
+    width: 100%;
+    height: calc(100% - 8px);
+    overflow: auto;
+  }
+}
+
+.mat-mdc-header-row {
+  height: 30px !important;
+}
+
+.mat-mdc-row {
+  height: 30px !important;
+}
+
+.filter-button {
+  width: fit-content;
+  height: 25px;
+}
+
+ul.breadcrumb li:last-child {
+  color: black;
+  pointer-events: none;
+}
+
+.consultant-name a {
+  text-decoration: none;
+  color: #0d6efd;
 }
