--- a/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.html
+++ b/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.html
@@ -33,23 +33,23 @@
       <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false"
         onpaste="return false" oncut="return false">
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>S.No</th>
-          <td mat-cell *matCellDef="let recruiter">{{ recruiter?.serialNum }}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 2%">S.No</th>
+          <td mat-cell *matCellDef="let recruiter" style="width: 2%">{{ recruiter?.serialNum }}</td>
         </ng-container>
 
         <ng-container matColumnDef="Company">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
-          <td mat-cell *matCellDef="let recruiter">{{ recruiter.company }}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 18%">Company</th>
+          <td mat-cell *matCellDef="let recruiter" style="width: 18%">{{ recruiter.company }}</td>
         </ng-container>
 
         <ng-container matColumnDef="RecruiterName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Recruiter Name</th>
-          <td mat-cell *matCellDef="let recruiter">{{ recruiter.recruiter }}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 12%">Recruiter Name</th>
+          <td mat-cell *matCellDef="let recruiter" style="width: 12%">{{ recruiter.recruiter }}</td>
         </ng-container>
 
         <ng-container matColumnDef="PhoneNumber">
-          <th mat-header-cell *matHeaderCellDef  mat-sort-header>Phone Number</th>
-          <td mat-cell *matCellDef="let recruiter">
+          <th mat-header-cell *matHeaderCellDef style="width: 10%">Phone Number</th>
+          <td mat-cell *matCellDef="let recruiter" style="width: 10%">
             <span>
               {{ recruiter.usnumber == null ? recruiter.contactnumber : recruiter.usnumber}}
             </span>
@@ -59,26 +59,26 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="Email" >
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-          <td mat-cell *matCellDef="let recruiter">{{ recruiter.email }}</td>
+        <ng-container matColumnDef="Email">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 18%">Email</th>
+          <td mat-cell *matCellDef="let recruiter" style="width: 18%">{{ recruiter.email }}</td>
         </ng-container>
 
         <ng-container matColumnDef="AddedBy">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Added By</th>
-          <td mat-cell *matCellDef="let recruiter">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 8%">Added By</th>
+          <td mat-cell *matCellDef="let recruiter" style="width: 8%">
             <span class="user-info" (click)="goToUserInfo(recruiter.addedby)">{{ recruiter.pseudoname }}</span>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="AddedOn">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Added On</th>
-          <td mat-cell *matCellDef="let recruiter">{{ recruiter.createddate | date:'yyyy-MM-dd'}}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 8%">Added On</th>
+          <td mat-cell *matCellDef="let recruiter" style="width: 8%">{{ recruiter.createddate | date:'MM-dd-yyyy'}}</td>
         </ng-container>
 
         <ng-container matColumnDef="LastUpdated">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Updated</th>
-          <td mat-cell *matCellDef="let recruiter">{{ recruiter.updateddate | date:'yyyy-MM-dd'}}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 8%">Last Updated</th>
+          <td mat-cell *matCellDef="let recruiter" style="width: 8%">{{ recruiter.updateddate | date:'MM-dd-yyyy'}}</td>
         </ng-container>
 
         <!-- <ng-container matColumnDef="Status">
@@ -96,8 +96,8 @@
 
         <!-- Action Column -->
         <ng-container matColumnDef="Action">
-          <th mat-header-cell *matHeaderCellDef>Action</th>
-          <td mat-cell *matCellDef="let recruiter" class="action-buttons">
+          <th mat-header-cell *matHeaderCellDef style="width: 5%">Action</th>
+          <td mat-cell *matCellDef="let recruiter" class="action-buttons" style="width: 5%">
             <span class="action-btns">
               <button [disabled]="!privilegeServ.hasPrivilege('EDIT_RECRUITER')" mat-icon-button
                 (click)="editRecruiter(recruiter)" class="action-button-ed"
